--- a/music/build.gradle
+++ b/music/build.gradle
@@ -3,12 +3,11 @@ if (rootProject.ext.isAlone) {
 } else {
     apply plugin: 'com.android.library'
 }
-apply plugin: 'com.neenbedankt.android-apt'
 
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+//    buildToolsVersion rootProject.ext.android.buildToolsVersion
     defaultConfig {
 
         if (rootProject.ext.isAlone) {
@@ -58,19 +57,31 @@ android {
 
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':commonlibrary')
+    implementation project(':commonlibrary')
     //用作颜色选择器
-    compile 'com.afollestad.material-dialogs:commons:0.9.1.0'
-    compile 'com.komi.slider:slider:0.4.0'
-    apt rootProject.ext.dependencies.dagger2_compiler
-    if (!rootProject.ext.isAlone) {
-        apt rootProject.ext.dependencies.arouter_compiler
+    implementation ('com.afollestad.material-dialogs:commons:0.9.1.0'){
+        exclude module: "support-v4"
+        exclude module:"support-core-ui"
+        exclude module:"support-compat"
+        exclude module:"appcompat-v7"
+        exclude module :"recyclerview-v7"
     }
-    testCompile 'junit:junit:4.12'
+    implementation ('com.komi.slider:slider:0.4.0'){
+        exclude module: "support-v4"
+        exclude module:"support-core-ui"
+        exclude module:"support-compat"
+        exclude module:"appcompat-v7"
+        exclude module :"recyclerview-v7"
+    }
+    annotationProcessor rootProject.ext.dependencies.dagger2_compiler
+    if (!rootProject.ext.isAlone) {
+        annotationProcessor rootProject.ext.dependencies.arouter_compiler
+    }
+    testImplementation 'junit:junit:4.12'
 //    compile files('libs/nineoldandroids-2.4.0.jar')
 }
 
