--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 android {
 //    signingConfigs {
 //        config {
@@ -22,7 +22,7 @@ android {
         }
     }
     compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+//    buildToolsVersion rootProject.ext.android.buildToolsVersion
     defaultConfig {
         applicationId "com.example.music"
         minSdkVersion rootProject.ext.android.minSdkVersion
@@ -52,10 +52,7 @@ android {
         }
 
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
+
     buildTypes {
         release {
             signingConfig signingConfigs.config
@@ -69,22 +66,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     if (!rootProject.ext.isAlone) {
-        compile project(':chat')
-        compile project(':music')
-        compile project(':news')
-        compile project(':live')
-        apt rootProject.ext.dependencies.arouter_compiler
-    } else {
-        compile project(':commonlibrary')
+        api project(':chat')
+        api project(':music')
+        api project(':news')
+        api project(':live')
+        annotationProcessor rootProject.ext.dependencies.arouter_compiler
     }
-    testCompile 'junit:junit:4.12'
+    implementation project(':commonlibrary')
+    testImplementation 'junit:junit:4.12'
     //注释掉原有bugly的仓库
-    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
-    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+//    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
+//    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-apply from: 'tinker-support.gradle'
+//apply from: 'tinker-support.gradle'
