--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,17 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath "com.tencent.bugly:tinker-support:1.0.8"
 //        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.1.8"
         // in the individual module build.gradle files
 
+
     }
+
 }
 
 allprojects {
