--- a/news/src/main/module/AndroidManifest.xml
+++ b/news/src/main/module/AndroidManifest.xml
@@ -34,6 +34,7 @@
 <activity android:name=".mvp.news.othernew.detail.OtherNewsDetailActivity"/>
         <activity android:name=".mvp.news.othernew.photo.OtherNewPhotoSetActivity"/>
         <activity android:name=".AdjustNewsTypeActivity" />
+        <activity android:name=".mvp.systeminfo.SystemInfoLoginActivity" />
 
         <meta-data
             android:name="com.example.news.NewsApplication"
