[feature] add person and consume query function

--- a/news/src/main/module/AndroidManifest.xml
+++ b/news/src/main/module/AndroidManifest.xml
@@ -26,17 +26,18 @@
         </activity>
         <activity android:name="MainActivity" />
         <activity android:name=".NewsContentActivity" />
-        <activity android:name=".mvp.librarylogin.LibraryLoginActivity"/>
-        <activity android:name=".LibraryInfoActivity"/>
-        <activity android:name=".mvp.cardinfo.CardInfoActivity"/>
-        <activity android:name=".mvp.cardlogin.CardLoginActivity"/>
-        <activity android:name=".mvp.news.othernew.special.SpecialNewsActivity"/>
-<activity android:name=".mvp.news.othernew.detail.OtherNewsDetailActivity"/>
-        <activity android:name=".mvp.news.othernew.photo.OtherNewPhotoSetActivity"/>
+        <activity android:name=".mvp.librarylogin.LibraryLoginActivity" />
+        <activity android:name=".LibraryInfoActivity" />
+        <activity android:name=".mvp.cardinfo.CardInfoActivity" />
+        <activity android:name=".mvp.cardlogin.CardLoginActivity" />
+        <activity android:name=".mvp.news.othernew.special.SpecialNewsActivity" />
+        <activity android:name=".mvp.news.othernew.detail.OtherNewsDetailActivity" />
+        <activity android:name=".mvp.news.othernew.photo.OtherNewPhotoSetActivity" />
         <activity android:name=".AdjustNewsTypeActivity" />
         <activity android:name=".mvp.systeminfo.SystemInfoLoginActivity" />
         <activity android:name=".ScoreQueryActivity" />
         <activity android:name=".mvp.systemcenter.SystemCenterActivity" />
+        <activity android:name=".mvp.consume.ConsumeQueryActivity" />
 
         <meta-data
             android:name="com.example.news.NewsApplication"
