--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".mvp.systeminfo.SystemInfoLoginActivity" />
         <activity android:name=".mvp.systemcenter.SystemCenterActivity"/>
         <activity android:name=".ScoreQueryActivity"/>
+        <activity android:name=".mvp.consume.ConsumeQueryActivity"/>
 
         <meta-data
             android:name="com.example.news.NewsApplication"
