--- a/commonlibrary/src/main/AndroidManifest.xml
+++ b/commonlibrary/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
     package="com.example.commonlibrary">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
