--- a/news/src/main/module/AndroidManifest.xml
+++ b/news/src/main/module/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="MainActivity" />
+        <activity android:name="MainActivity" android:launchMode="singleTask"/>
         <activity android:name=".NewsContentActivity" />
         <activity android:name=".mvp.librarylogin.LibraryLoginActivity" />
         <activity android:name=".LibraryInfoActivity" />
