--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -80,7 +84,7 @@ dependencies {
     implementation project(':commonlibrary')
     testImplementation 'junit:junit:4.12'
     //注释掉原有bugly的仓库
-//    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
-//    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    //    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
+    //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
 //apply from: 'tinker-support.gradle'
