--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".mvp.systemcenter.SystemCenterActivity"/>
         <activity android:name=".ScoreQueryActivity"/>
         <activity android:name=".mvp.consume.ConsumeQueryActivity"/>
+        <activity android:name=".mvp.course.CourseQueryActivity"/>
 
         <meta-data
             android:name="com.example.news.NewsApplication"
