--- a/news/src/main/module/AndroidManifest.xml
+++ b/news/src/main/module/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <activity android:name=".ScoreQueryActivity" />
         <activity android:name=".mvp.systemcenter.SystemCenterActivity" />
         <activity android:name=".mvp.consume.ConsumeQueryActivity" />
-
+        <activity android:name=".mvp.course.CourseQueryActivity"/>
         <meta-data
             android:name="com.example.news.NewsApplication"
             android:value="IModuleConfig" />
