--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme.Day">
-        <activity android:name=".MainActivity">
+        android:theme="@style/CustomTheme.Day.Main">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
 
-        <activity android:name=".GuideActivity"/>
-        <activity android:name=".SplashActivity"/>
+        <activity android:name=".GuideActivity" />
+        <activity android:name=".MainActivity" />
 
 
     </application>
