--- a/chat/src/main/AndroidManifest.xml
+++ b/chat/src/main/AndroidManifest.xml
@@ -50,8 +50,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/CustomTheme.Day">
+        android:supportsRtl="true">
         <activity
             android:name=".ui.SplashActivity"
             android:theme="@style/splashTheme">
