--- a/chat/src/main/module/AndroidManifest.xml
+++ b/chat/src/main/module/AndroidManifest.xml
@@ -111,6 +111,7 @@
         <!--小视频界面-->
         <activity android:name="mabeijianxi.camera.MediaRecorderActivity" />
         <activity android:name=".ui.VideoPlayActivity" />
+        <activity android:name=".mvp.commentlist.CommentListActivity" />
         <!--高德地图API_KEY-->
         <meta-data
             android:name="com.amap.api.v2.apikey"
