[fix] post and comment problem

--- a/chat/src/main/module/AndroidManifest.xml
+++ b/chat/src/main/module/AndroidManifest.xml
@@ -112,6 +112,7 @@
         <activity android:name="mabeijianxi.camera.MediaRecorderActivity" />
         <activity android:name=".ui.VideoPlayActivity" />
         <activity android:name=".mvp.commentlist.CommentListActivity" />
+        <activity android:name=".mvp.commentdetail.CommentListDetailActivity" />
         <!--高德地图API_KEY-->
         <meta-data
             android:name="com.amap.api.v2.apikey"
