--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     implementation project(':commonlibrary')
     testImplementation 'junit:junit:4.12'
     //注释掉原有bugly的仓库
-    //    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
-    //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+        compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
+        compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-//apply from: 'tinker-support.gradle'
+apply from: 'tinker-support.gradle'
