[fix]修复新闻模块调整、密码修改设置和登陆界面跳转等bug

--- a/chat/src/main/AndroidManifest.xml
+++ b/chat/src/main/AndroidManifest.xml
@@ -96,8 +96,8 @@
         <activity android:name=".ui.NearbyPeopleActivity"/>
         <activity android:name=".ui.HappyContentDisplayActivity"/>
         <activity android:name=".ui.WallPaperActivity"/>
-
-
+        <activity android:name=".ui.AccountManageActivity"/>
+        <activity android:name=".ui.PasswordChangeActivity"/>
 
         <!--小视频界面-->
         <activity android:name="mabeijianxi.camera.MediaRecorderActivity"/>
