--- a/chat/src/main/module/AndroidManifest.xml
+++ b/chat/src/main/module/AndroidManifest.xml
@@ -113,6 +113,8 @@
         <activity android:name=".ui.VideoPlayActivity" />
         <activity android:name=".mvp.commentlist.CommentListActivity" />
         <activity android:name=".mvp.commentdetail.CommentListDetailActivity" />
+        <activity android:name=".ui.AccountManageActivity"/>
+        <activity android:name=".ui.AccountManageActivity"/>
         <!--高德地图API_KEY-->
         <meta-data
             android:name="com.amap.api.v2.apikey"
