--- a/chat/src/main/module/AndroidManifest.xml
+++ b/chat/src/main/module/AndroidManifest.xml
@@ -114,7 +114,8 @@
         <activity android:name=".mvp.commentlist.CommentListActivity" />
         <activity android:name=".mvp.commentdetail.CommentListDetailActivity" />
         <activity android:name=".ui.AccountManageActivity"/>
-        <activity android:name=".ui.AccountManageActivity"/>
+        <activity android:name=".ui.PasswordChangeActivity"/>
+        <activity android:name=".mvp.notify.SystemNotifyActivity"/>
         <!--高德地图API_KEY-->
         <meta-data
             android:name="com.amap.api.v2.apikey"
